--- a/DOM/DOM_Intro_CODE/Selecting/app.css
+++ b/DOM/DOM_Intro_CODE/Selecting/app.css
@@ -27,3 +27,11 @@ img.square {
 .tocnumber {
     color: black;
 }
+
+.purple {
+    color: purple;
+}
+
+.border {
+    border: 1px solid black;
+}
