update wiht Resful

--- a/RESTful/RESTDemo/views/comments/new.ejs
+++ b/RESTful/RESTDemo/views/comments/new.ejs
@@ -20,6 +20,8 @@
         <br />
         <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
         <button>Submit</button>
+        <br />
+        <a href="/comments">GO to comments</a>
       </section>
     </form>
   </body>
